nullaway_error_7309d526-99da-4bb7-b166-bd0865d4d678.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/ServerRequestAuthFilter.java:36: error: [NullAway] initializer method does not guarantee @NonNull field serverConfig (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ServerRequestAuthFilter() {
           ^
